changed numbering of statements, minor update

--- a/Beginner_1/4. Simple and Compound Statements.ipynb
+++ b/Beginner_1/4. Simple and Compound Statements.ipynb
@@ -4,16 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1 Simple Statements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 3.1 Simple Statements\n",
+    "\n",
     "A simple statement is comprised within a single logical line. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -31,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Several simple statements may occur on a single line separated by semicolons − "
+    "Several simple statements may occur on a single line separated by semicolons. Semicolons mark the end of a line of code but it's possible to have several statements in one line."
    ]
   },
   {
@@ -69,17 +64,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Compound Statements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Compound statements contain (groups of) other statements; they affect or control the execution of those other statements in some way. \n",
+    "## 3.2 Compound Statements\n",
     "\n",
+    "Compound statements contain (groups of) other statements; they affect or control the execution of those other statements in some way.\n",
     "\n",
-    "In general, compound statements span multiple lines, although in simple incarnations a whole compound statement may be contained in one line. "
+    "In general, compound statements span multiple lines, although in simple incarnations a whole compound statement may be contained in one line."
    ]
   },
   {
@@ -104,7 +93,7 @@
    "source": [
     "A compound statement consists of one or more ‘clauses.’ A clause consists of a header and a ‘suite.’ The clause headers of a particular compound statement are all at the same indentation level. Each clause header begins with a uniquely identifying keyword and ends with a colon. \n",
     "\n",
-    "Syntax −"
+    "Syntax:"
    ]
   },
   {
@@ -128,6 +117,13 @@
     "suite         ::=  stmt_list NEWLINE | NEWLINE INDENT statement+ DEDENT\n",
     "statement     ::=  stmt_list NEWLINE | compound_stmt\n",
     "stmt_list     ::=  simple_stmt (\";\" simple_stmt)* [\";\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the next notebook, we'll go through different kinds of simple statements, using various operators as well as an overview of delimiters you'll encounter in Python."
    ]
   }
  ],
