minor update to introspection

--- a/Beginner_1/1. Introspection.ipynb
+++ b/Beginner_1/1. Introspection.ipynb
@@ -52,14 +52,28 @@
     "\n",
     "As you can see, Python's online help utility displays information on a variety of topics, or for a particular object. The help utility is quite useful, and does make use of Python's introspection capabilities.\n",
     "\n",
-    "If we want to quit, just type <b>`'quit'`</b>, and we will be returned to the Python prompt."
+    "If we want to quit, just type <b>`'quit'`</b>, and we will be returned to the Python prompt.\n",
+    "\n",
+    "`help()` can also accept parameters. It can be any object (everything in Python is an object!), and it gives helpful information specific to that object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n = 1\n",
+    "help(n)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to know more about <b>`help()`</b>, just click [here](http://www.ibm.com/developerworks/library/l-pyint/index.html)."
+    "If you want to know more about __`help()`__, just click [here](http://www.ibm.com/developerworks/library/l-pyint/index.html)."
    ]
   },
   {
@@ -80,11 +94,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python provides a way to examine the contents of modules (and other objects) using the built-in <b>`dir()`</b> function.\n",
+    "Python provides a way to examine the contents of modules (and other objects) using the built-in __`dir()`__ function.\n",
     " \n",
-    "It returns a sorted list of attribute names for any object passed to it. If no object is specified, <b>`dir()`</b> returns the names in the current scope.\n",
+    "It returns a sorted list of attribute names for any object passed to it. If no object is specified, __`dir()`__ returns the names in the current scope.\n",
     "\n",
     "![Beginner_1](./images/img_dir.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "s = \"string\"\n",
+    "dir(s)"
    ]
   },
   {
@@ -93,7 +119,14 @@
     "collapsed": true
    },
    "source": [
-    "If you want to know more about <b>`dir()`</b>, click [here](http://www.ibm.com/developerworks/library/l-pyint/index.html)"
+    "If you want to know more about __`dir()`__, click [here](http://www.ibm.com/developerworks/library/l-pyint/index.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If at any point you feel lost and need help, `help()` and `dir()` are at your disposal. Use them in the code boxes to find out more about what's happening in the code."
    ]
   }
  ],
