minor update to introspection

--- a/Beginner_1/1. Introspection.ipynb
+++ b/Beginner_1/1. Introspection.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If at any point you feel lost and need help, `help()` and `dir()` are at your disposal. Use them in the code boxes to find out more about what's happening in the code."
+    "If at any point you feel lost and need help, `help()` and `dir()` are at your disposal. Use them in the code boxes to find out more about what's happening in the examples."
    ]
   }
  ],
