changed numbering of notebooks, cleaned markdown

--- a/Beginner_2/5. Built-in Functions.ipynb
+++ b/Beginner_2/5. Built-in Functions.ipynb
@@ -30,14 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "input('Enter your name: ' )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  "
+    "input('Enter your name: ')"
    ]
   },
   {
@@ -46,11 +39,11 @@
    "source": [
     "## 5.2 [print()](https://docs.python.org/3.5/library/functions.html#print)\n",
     "\n",
-    "If you want your program to display something, you can give explicit instructions with the <b>`print`</b> function. \n",
+    "If you want your program to display something, you can give explicit instructions with the __`print()`__ function. \n",
     "\n",
     "The print function will print as strings everything in a comma-separated sequence of expressions, and it will separate the results with single blanks by default. \n",
     "\n",
-    "In the following example we can see two print calls. We are printing two values in both cases, i.e. a string and a float number:"
+    "In the following example we can see a print call. We are printing two values, i.e. a string and a float number:"
    ]
   },
   {
@@ -63,14 +56,14 @@
    "source": [
     "# Run the code to see the results:\n",
     "a = 'Hello'\n",
-    "print(a)"
+    "print(a, \"42\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's possible to redefine the separator between values by assigning an arbitrary string to the keyword parameter <b>`\"sep\"`</b>:"
+    "It's possible to redefine the separator between values by assigning an arbitrary string to the keyword parameter __`\"sep\"`__:"
    ]
   },
   {
@@ -84,12 +77,12 @@
     "a = \"Hello\"\n",
     "b = \"World\"\n",
     "\n",
-    "print(a,b)\n",
+    "print(a, b)\n",
     "\n",
-    "print(a,b,sep=\"_\")\n",
+    "print(a, b, sep=\"_\")\n",
     "\n",
-    "print(a,b,sep=\"...\")\n",
-    "print(192,168,178,42,sep=\".\")"
+    "print(a, b, sep=\"...\")\n",
+    "print(192, 168, 178, 42, sep=\".\")"
    ]
   },
   {
@@ -226,13 +219,6 @@
     "y = int(x) # We used the int() function to convert \"100\" which is a string into an integer.\n",
     "\n",
     "print(type(y))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    "
    ]
   },
   {
