--- a/Beginner_2/6 Variables.ipynb
+++ b/Beginner_2/6 Variables.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.1 Variables\n",
+    "# Variables\n",
     "\n",
     "Variables are reserved memory locations to store values.\n",
     "Every variable in Python is an object."
@@ -18,7 +18,6 @@
    },
    "outputs": [],
    "source": [
-    "# Assigning values to variables.\n",
     "# The equal sign (=) is used to assign values to variables.\n",
     "# Run the code\n",
     "\n",
@@ -59,14 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1.1 Identifier Naming Rules\n",
+    "## 6.1 Identifier Naming Rules\n",
     "\n",
     "- (a) Variables names must start with a letter or an underscore, such as:\n",
     "    - variable\n",
@@ -89,23 +81,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "      "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1.2 Reserved Words\n",
+    "## 6.2 Reserved Words\n",
     "\n",
-    "The following identifiers are used as reserved words, or keywords of the language, and <b>cannot</b> be used as ordinary identifiers. They must be spelled exactly as written here −"
+    "The following identifiers are used as reserved words, or keywords of the language, and <b>cannot</b> be used as ordinary identifiers. They must be spelled exactly as written here:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -122,14 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1.3 Naming Conventions\n",
+    "## 6.3 Naming Conventions\n",
     "\n",
     "1. Readability is very important.\n",
     "2. Descriptive names are very useful\n",
@@ -140,14 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1.4 Multiple Assignment\n",
+    "## 6.4 Multiple Assignment\n",
     "\n",
     "Python allows you to assign a single value to several variables simultaneously."
    ]
@@ -162,11 +133,19 @@
    "source": [
     "# In this example, all 3 objects are assigned to the same memory location.\n",
     "# Run the code\n",
+    "\n",
     "a = b = c = 1\n",
     "\n",
     "print(a)\n",
     "print(b)\n",
     "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python also allows assignment of multiple variables simultaneously."
    ]
   },
   {
@@ -177,34 +156,21 @@
    },
    "outputs": [],
    "source": [
-    "'''\n",
-    "In this example, two integer objects with values 1 and 2 are assigned \n",
-    "to variables a and b respectively, \n",
-    "and one string object with the value \"Python\" is assigned to the variable c.\n",
-    "'''\n",
+    "# In this example, multiple variables are assigned then switched\n",
     "# Run the code\n",
     "\n",
-    "a = 1\n",
-    "b = 2\n",
-    "c = \"Python\"\n",
+    "a, b = 1, \"2\"\n",
+    "a, b = b, a\n",
     "\n",
-    "print(1)\n",
-    "print(2)\n",
-    "print(3)"
+    "print(a)\n",
+    "print(b)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1.5 [Comparison Chaining](https://docs.python.org/3/reference/expressions.html#comparisons) \n",
+    "## 6.5 [Comparison Chaining](https://docs.python.org/3.5/reference/expressions.html#comparisons) \n",
     "\n",
     "\n",
     "All comparison operations in Python have the same priority, which is lower than that of any arithmetic, shifting or bitwise operation. \n",
@@ -221,14 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1.6 Re-assigning of Variables"
+    "## 6.6 Re-assigning of Variables"
    ]
   },
   {
@@ -244,11 +203,9 @@
     "int_a = 2\n",
     "\n",
     "\n",
-    "\"\"\"\n",
-    "1 is originally assigned to int_a.\n",
-    "What do you think will happen if we reset it to 2 and print it?\n",
-    "print 'int_a' to find out!\n",
-    "\"\"\"\n",
+    "# 1 was originally assigned to int_a.\n",
+    "# What do you think will happen if we reset it to 2 and print it?\n",
+    "# print 'int_a' to find out!\n",
     "\n",
     "#Write your code below\n",
     "\n",
@@ -259,18 +216,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1.7 Data Types\n",
+    "## 6.7 Data Types\n",
     "\n",
     "The data stored in memory can be of many types. For example, a person's age is stored as a numeric value and his or her address is stored as alphanumeric characters. Python has various standard data types that are used to define the operations possible on them and the storage method for each of them.\n",
     "\n",
-    "Python has five standard data types −\n",
+    "Python has five standard data types:\n",
     "\n",
     " - Numbers\n",
     "\n",
@@ -310,7 +260,7 @@
     "\n",
     "Number data types store numeric values. Number objects are created when you assign a value to them. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -356,27 +306,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 2. String (immutable)\n",
     "\n",
     "- Strings in Python are identified as a contiguous set of characters represented in the quotation marks. \n",
     "\n",
     "- Python allows for either pairs of single or double quotes. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -388,9 +331,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Subsets of strings can be taken using the slice operator (<b>`[  ]`</b> and <b>`[ : ]`</b>) with indexes starting at 0 in the beginning of the string and working their way from -1 at the end.\n",
+    "- Subsets of an [iterable](https://wiki.python.org/moin/Iterator) can be taken using the slice operator (__`[ : ]`__) with indexes starting at 0 in the beginning of the string and working their way to -1 at the end. Strings, as well as lists, and sets are subscriptable iterables. Slicing creates copies of them.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -403,33 +346,14 @@
    "source": [
     "my_string = \"I love Python!\"\n",
     "\n",
-    "my_string[0:6] # Run the code to see the result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Try it yourself!\n",
-    "Slice the string and the result should be \"Python\"\n",
-    "'''\n",
+    "my_string[0:6]  # Run the code to see the result\n",
+    "print(my_string)\n",
     "\n",
-    "my_string = \"I love Python!\"\n",
-    "\n",
+    "# Try it yourself!\n",
+    "# Slice the string and the result should be \"Python\"\n",
     "# Write your code below:\n",
+    "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    "
    ]
   },
   {
@@ -440,7 +364,7 @@
    "source": [
     "- The plus ( <b>`+`</b> ) sign is the string concatenation operator and the asterisk ( <b>`*`</b> ) is the repetition operator. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -464,20 +388,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 3. List (mutable)\n",
     "\n",
     "Lists are the most versatile of Python's compound data types. A list contains items separated by commas and enclosed within square brackets ( <b>`[ ]`</b> ).\n",
     "\n",
     "To some extent, lists are similar to arrays in C. One difference between them is that all the items belonging to a list can be of different data type.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -489,7 +406,11 @@
    "outputs": [],
    "source": [
     "my_list1 = [1, 2, 3, 4, 5]\n",
-    "my_list2 = [1, \"John\", \"Bob\", \"7.86\"]"
+    "my_list2 = [1, \"John\", \"Bob\", \"7.86\"]\n",
+    "\n",
+    "# Try slicing the list:\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -498,7 +419,7 @@
    "source": [
     "The values stored in a list can be accessed using the slice operator (<b>`[  ]`</b> and <b>`[ : ]`</b>) with indexes starting at 0 in the beginning of the list and working their way to end -1. The plus ( <b>`+`</b> ) sign is the list concatenation operator, and the asterisk ( <b>`*`</b> ) is the repetition operator. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -509,10 +430,10 @@
    },
    "outputs": [],
    "source": [
-    "'''Can you guess the output below?\n",
-    "Run the code to find out!'''\n",
+    "# Can you guess the output below?\n",
+    "# Run the code to find out!\n",
     "\n",
-    "list = [ 'abcd', 786 , 2.23, 'john', 70.2 ]\n",
+    "list = ['abcd', 786 , 2.23, 'john', 70.2]\n",
     "tinylist = [123, 'john']\n",
     "\n",
     "print(list)            # Prints complete list\n",
@@ -527,13 +448,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 4. Tuples (immutable)\n",
     "\n",
     "A tuple is another sequence data type that is similar to the list. A tuple consists of a number of values separated by commas. Unlike lists, however, tuples are enclosed within parentheses.\n",
@@ -541,7 +455,7 @@
     "\n",
     "The main differences between lists and tuples are: Lists are enclosed in brackets ( <b>`[ ]`</b> ) and their elements and size can be changed, while tuples are enclosed in parentheses ( <b>`( )`</b> ) and cannot be updated. Tuples can be thought of as read-only lists. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -552,22 +466,15 @@
    },
    "outputs": [],
    "source": [
-    "tuple = ( 'abcd', 786 , 2.23, 'john', 70.2  )\n",
+    "tuple = ('abcd', 786 , 2.23, 'john', 70.2)\n",
     "tinytuple = (123, 'john')\n",
     "\n",
-    "print tuple             # Prints complete list\n",
-    "print tuple[0]          # Prints first element of the list\n",
-    "print tuple[1:3]        # Prints elements starting from 2nd till 3rd \n",
-    "print tuple[2:]         # Prints elements starting from 3rd element\n",
-    "print tinytuple * 2     # Prints list two times\n",
-    "print tuple + tinytuple # Prints concatenated lists"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    "
+    "print(tuple)             # Prints complete list\n",
+    "print(tuple[0])          # Prints first element of the list\n",
+    "print(tuple[1:3])        # Prints elements starting from 2nd till 3rd \n",
+    "print(tuple[2:])         # Prints elements starting from 3rd element\n",
+    "print(tinytuple * 2)     # Prints list two times\n",
+    "print(tuple + tinytuple) # Prints concatenated lists"
    ]
   },
   {
@@ -585,51 +492,30 @@
     "\n",
     "Dictionaries are enclosed by curly braces (<b>`{ }`</b>) and values can be assigned and accessed using square braces (<b>`[ ]`</b>). \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "dict = {}\n",
     "dict['one'] = \"This is one\"\n",
-    "dict[2]     = \"This is two\"\n",
+    "dict[2] = \"This is two\"\n",
     "\n",
     "tinydict = {'name': 'john','code':6734, 'dept': 'sales'}\n",
     "\n",
     "\n",
-    "print dict['one']       # Prints value for 'one' key\n",
-    "print dict[2]           # Prints value for 2 key\n",
-    "print tinydict          # Prints complete dictionary\n",
-    "print tinydict.keys()   # Prints all the keys\n",
-    "print tinydict.values() # Prints all the values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This produce the following result −"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "This is one\n",
-    "This is two\n",
-    "{'dept': 'sales', 'code': 6734, 'name': 'john'}\n",
-    "['dept', 'code', 'name']\n",
-    "['sales', 6734, 'john']"
+    "print(dict['one'])       # Prints value for 'one' key\n",
+    "print(dict[2])           # Prints value for 2 key\n",
+    "print(tinydict)          # Prints complete dictionary\n",
+    "print(tinydict.keys())   # Prints all the keys\n",
+    "print(tinydict.values()) # Prints all the values\n",
+    "print(tinydict.items())  # Prints all the key and value pairs as tuples"
    ]
   },
   {
@@ -637,13 +523,6 @@
    "metadata": {},
    "source": [
     "Dictionaries have no concept of order among elements. It is incorrect to say that the elements are \"out of order\"; they are simply unordered."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  "
    ]
   }
  ],
