--- a/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
+++ b/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.5 List\n",
+    "# 6.4 List\n",
     "\n",
-    "List is the most versatile datatype available in Python which can be written as a list of comma-separated values between square brackets ( <b>[ ]</b> ). \n",
+    "List is the most versatile datatype available in Python which can be written as a list of comma-separated values between square brackets (__[ ]__).\n",
     "\n",
-    "A list can also be empty: <b>`empty_list = []`</b>.\n",
+    "A list can also be empty: __`empty_list = []`__.\n",
     "\n",
     "\n",
-    "Lists are Python's ordered mutable data type. One important thing about a list is that the items <b>need not be of the same type</b>. \n",
+    "Lists are Python's ordered mutable data type. One important thing about a list is that the items __need not be of the same type__.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -34,13 +34,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.5.1 Accessing values in lists\n",
+    "## 6.4.1 Accessing values in lists\n",
     "\n",
-    "You can access an individual item on the list by its index. An index is like an address that identifies the item's place in the list. The index appears directly after the list name, in between brackets, like this: <b>`list_name[index]`</b>.\n",
+    "You can access an individual item on the list by its index. An index is like an address that identifies the item's place in the list. The index appears directly after the list name, in between brackets, like this: __`list_name[index]`__.\n",
     "\n",
-    "Always remember that list indices always start at <b>0</b>.\n",
+    "Always remember that list indices always start at __0__.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -75,14 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "a list index may be used to assign values as well −"
+    "a list index may be used to assign values as well:"
    ]
   },
   {
@@ -105,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.5.2 Methods\n",
+    "## 6.4.2 Methods\n",
     "\n",
     "### len()\n",
     "Using <b>`len( )`</b> returns the number of top-level items contained in the object being queried. For the example, run the code below −"
@@ -223,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.5.3 List slicing\n",
+    "## 6.4.3 List slicing\n",
     "\n",
     "One way to remember how slices work is to think of the indices as pointing between characters, with the left edge of the first character numbered 0. Then the right edge of the last character of a string of n characters has index n:\n",
     "\n",
