--- a/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
+++ b/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.6 Tuples\n",
+    "# 6.5 Tuples\n",
     "\n",
     "A tuple is a sequence of immutable Python objects. Tuples are sequences, just like lists. The differences between tuples and lists are, the tuples cannot be changed unlike lists and tuples use parentheses, whereas lists use square brackets.\n",
     "\n",
@@ -12,7 +12,7 @@
     "\n",
     "Tuples can be expanded into variables easily. In assigning values, you may also ommit the paretheses. \n",
     "\n",
-    "See examples below −"
+    "See examples below:"
    ]
   },
   {
@@ -32,14 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You may create an empty tuple like this −"
+    "You may create an empty tuple like this:"
    ]
   },
   {
@@ -51,13 +44,6 @@
    "outputs": [],
    "source": [
     "tuple1 = ()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  "
    ]
   },
   {
@@ -89,11 +75,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.6.1 Accessing Values in a Tuple\n",
+    "## 6.5.1 Accessing Values in a Tuple\n",
     "\n",
     "To access values in tuple, use the square brackets for slicing along with the index or indices to obtain value available at that index (This is similar in accessing lists) \n",
     "\n",
-    "Run the examples below −"
+    "Run the examples below:"
    ]
   },
   {
