--- a/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
+++ b/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.4 Strings \n",
+    "# 6.3 Strings \n",
     "\n",
     "Strings store characters and have many built-in convenience methods that let you modify their content. Strings are immutable, meaning they cannot be changed in place."
    ]
@@ -13,11 +13,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.1 Quotations\n",
+    "## 6.3.1 Quotations\n",
     "\n",
     "Strings are amongst the most popular types in Python. We can create them simply by enclosing characters in quotes. Python treats single quotes the same as double quotes.\n",
     "\n",
-    "Creating strings is as simple as assigning a value to a variable −"
+    "Creating strings is as simple as assigning a value to a variable:"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One advantage of using double quotes is that, you don't have to worry about printing with apostrophes −"
+    "One advantage of using double quotes is that, you don't have to worry about printing with apostrophes:"
    ]
   },
   {
@@ -83,14 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.4.2 Escape characters\n",
+    "## 6.3.2 Escape characters\n",
     "\n",
     "This <b>`\\`</b> (backslash) character, as seen on the previous example, is used to escape characters that otherwise have a special meaning, such as newline, backslash itself, or the quote character.\n",
     "\n",
@@ -122,7 +115,7 @@
    "source": [
     "#### Escape Sequences\n",
     "\n",
-    "These are the escape sequences Python supports −\n",
+    "These are the escape sequences Python supports:\n",
     "\n",
     "![Beginner_2](./images/img_escape_characters.png)"
    ]
@@ -131,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are some examples. Run the code to see the result −"
+    "Here are some examples. Run the code to see the result:"
    ]
   },
   {
@@ -143,8 +136,8 @@
    "outputs": [],
    "source": [
     "# Tab\n",
-    "\n",
     "string_tab = \"\\tThis string is tabbed.\"\n",
+    "\n",
     "print(string_tab)"
    ]
   },
@@ -157,8 +150,8 @@
    "outputs": [],
    "source": [
     "# Split\n",
-    "\n",
     "string_split = \"This will split\\non a line.\"\n",
+    "\n",
     "print(string_split)"
    ]
   },
@@ -185,7 +178,6 @@
    "outputs": [],
    "source": [
     "# List\n",
-    "\n",
     "string_list = \"\"\"\n",
     "My to do list:\n",
     "\\t* Study Python.\n",
@@ -200,13 +192,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.3 Methods \n",
+    "## 6.3.3 Methods \n",
     "\n",
-    "Here are a few useful methods for strings −\n",
+    "Here are a few useful methods for strings:\n",
     "\n",
-    "#### a. `.upper( )` and `.lower( )` \n",
-    "- Performing the <b>`.upper()`</b> method on a string converts all of the characters to uppercase;\n",
-    "- Performing the <b>`.lower()`</b> method converts all of the characters to lowercase.\n",
+    "#### a. `.upper()` and `.lower()` \n",
+    "- Performing the __`.upper()`__ method on a string converts all of the characters to uppercase;\n",
+    "- Performing the __`.lower()`__ method converts all of the characters to lowercase.\n",
     "\n",
     "For example −"
    ]
@@ -227,11 +219,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, world!\n",
+      "hello, world!\n"
+     ]
+    }
+   ],
    "source": [
     "# using .lower()\n",
     "\n",
@@ -246,16 +247,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### b. `.count()`\n",
     "\n",
-    "The <b>`.count()`</b> method adds up the number of times a character or sequence of characters appears in a string.\n",
+    "The __`.count()`__ method adds up the number of times a character or sequence of characters appears in a string.\n",
     "\n",
     "For example −"
    ]
@@ -283,16 +277,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### c. `.find()`\n",
     "\n",
-    "We use <b>`.find()`</b> to search for a specific character/s in a string.\n",
+    "We use __`.find()`__ to search for a specific character/s in a string.\n",
     "\n",
     "For example −"
    ]
@@ -322,16 +309,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### d. `.replace()`\n",
     "\n",
-    "The method <b>`replace()`</b> returns a copy of the string in which the occurrences of old have been replaced with new, optionally restricting the number of replacements to max. \n",
+    "The method __`replace()`__ returns a copy of the string in which the occurrences of old have been replaced with new, optionally restricting the number of replacements to max. \n",
     "\n",
     "##### Syntax \n",
     "`str.replace(old, new[, max])`\n",
@@ -346,7 +326,7 @@
     "##### Return Value\n",
     "This method returns a copy of the string with all occurrences of substring old replaced by new. If the optional argument max is given, only the first count occurrences are replaced.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -365,21 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.4.4 String Formatting \n",
+    "## 6.3.4 String Formatting \n",
     "\n",
     "The string format operator ( <b>`%`</b> ) is unique to strings and makes up for the pack of having functions from C's `printf()`.\n",
     "\n",
@@ -407,7 +373,7 @@
    "source": [
     "Note that we used <b>`%s`</b> for string.\n",
     "\n",
-    "Here's another example −"
+    "Here's another example:"
    ]
   },
   {
@@ -430,14 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here is the list of complete set of symbols which can be used along with <b>`%`</b> −"
+    "Here is the list of complete set of symbols which can be used along with __`%`__:"
    ]
   },
   {
@@ -472,14 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here's a comparison of the Old and the new string formatting −"
+    "Here's a comparison of the Old and the new string formatting:"
    ]
   },
   {
@@ -495,13 +447,6 @@
     "\n",
     "#New\n",
     "print('{} {}'.format('one', 'two'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  "
    ]
   }
  ],
