--- a/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
+++ b/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.7 Dictionaries\n",
+    "# 6.6 Dictionaries\n",
     "\n",
-    "> Dictionaries are Python's built-in associative data type. A dictionary is made of <b>key-value pairs</b> where each key corresponds to a value. Like sets, <b>dictionaries are unordered</b>. \n",
+    "> Dictionaries are Python's built-in associative data type. A dictionary is made of __key-value pairs__ where each key corresponds to a value. Like sets, __dictionaries are unordered__. \n",
     "\n",
     "> A few notes about keys and values: * The key must be immutable and hashable while the value can be of any type. Common examples of keys are tuples, strings and numbers. * A single dictionary can contain keys of varying types and values of varying types.\n",
     "\n",
-    "Each key is separated from its value by a colon ( `:` ), the items are separated by commas, and the whole thing is enclosed in curly braces −"
+    "Each key is separated from its value by a colon (`:`), the items are separated by commas, and the whole thing is enclosed in curly braces:"
    ]
   },
   {
@@ -28,19 +28,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The example above is a dictionary called <b>`my_dictionary`</b> with three key-value pairs −\n",
+    "The example above is a dictionary called __`my_dictionary`__ with three key-value pairs:\n",
     "\n",
-    "- <b>`'key1'`</b> points to the value <b>`1`</b>, \n",
-    "- <b>`'key2'`</b> points to the value <b>`2`</b>, and\n",
-    "- <b>`'key3'`</b> points to the value <b>`3`</b>\n",
+    "- __`'key1'`__ points to the value __`1`__, \n",
+    "- __`'key2'`__ points to the value __`2`__, and\n",
+    "- __`'key3'`__ points to the value __`3`__\n",
     "\n",
     "#### Facts about Dictionaries:\n",
-    "- (a) <b>Keys</b> are <b>unique</b> within a dictionary while <b>values may not be</b>. \n",
-    "- (b) The <b>values</b> of a dictionary </b>can be of any type</b>;\n",
-    "- (c) The <b>keys</b> must be of an <b>immutable data type</b> such as strings, numbers, or tuples. \n",
     "\n",
-    "For example −\n",
-    "\n"
+    "- (a) __Keys__ are __unique__ within a dictionary while __values may not be__. \n",
+    "- (b) The __values__ of a dictionary __can be of any type__;\n",
+    "- (c) The __keys__ must be of an __immutable data type__ such as strings, numbers, or tuples. \n",
+    "\n",
+    "For example:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "source": [
     "- (d) No duplicate key is allowed. When duplicate keys encountered during assignment, the last assignment wins.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -89,25 +89,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An empty dictionary without any items is written with just two curly braces, like this −"
+    "An empty dictionary without any items is written either with just two curly braces or we may also use the __`dict()`__ class, like this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "my_dictionary = {}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "or we may also use <b>`dict()`</b> to create a new empty dictionary. "
+    "my_dictionary = {}\n",
+    "new_dictionary = dict()"
    ]
   },
   {
@@ -121,14 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.7.1 Accessing Values in a Dictionary\n",
+    "## 6.6.1 Accessing Values in a Dictionary\n",
     "\n",
     "To access dictionary elements, you can use the familiar square brackets along with the key to obtain its value. "
    ]
@@ -150,18 +137,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.7.2 Adding New Entries\n",
+    "## 6.6.2 Adding New Entries\n",
     "\n",
     "Dictionaries are \"mutable\" which means they can be changed after they are created. We can add new key/value pairs to the dictionary. \n",
     "\n",
-    "Here's the syntax −"
+    "Here's the syntax:"
    ]
   },
   {
@@ -199,14 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here's another example −"
+    "Here's another example:"
    ]
   },
   {
@@ -239,18 +212,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.7.3 Changing the Entries\n",
+    "## 6.6.3 Changing the Entries\n",
     "\n",
-    "A new value can be associated with a key by assigning a value to the key.\n",
-    "\n",
-    "Syntax −"
+    "A new value can be associated with a key by assigning a value to the key."
    ]
   },
   {
@@ -261,6 +225,7 @@
    },
    "outputs": [],
    "source": [
+    "# Syntax\n",
     "dict_name[key] = new_value"
    ]
   },
@@ -292,9 +257,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.7.4 Deleting Entries\n",
+    "## 6.6.4 Deleting Entries\n",
     "\n",
-    "Items can be removed from a dictionary with the <b>`del`</b> command. \n",
+    "Items can be removed from a dictionary with the __`del`__ command. \n",
     "\n",
     "Here's the syntax:"
    ]
@@ -314,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The example above will remove the key <b>`key_name`</b> AND it's associated value from the dictionary."
+    "The example above will remove the key __`key_name`__ AND it's associated value from the dictionary."
    ]
   },
   {
@@ -344,17 +309,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.7.5 Other methods\n",
+    "## 6.6.5 Other methods\n",
     "\n",
     "### a. len( )\n",
-    "The length of a dictionary is the number of key-value pairs it has. Each pair counts onlt <b>once</b>, even if the value is a list."
+    "\n",
+    "The length of a dictionary is the number of key-value pairs it has. Each pair counts only __once__, even if the value is a list."
    ]
   },
   {
@@ -376,14 +335,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### b. str( )\n",
+    "\n",
     "Produces a printable string representation of a dictionary."
    ]
   },
@@ -406,14 +359,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### c. dict.keys()\n",
+    "\n",
     "Returns list of the dictonary's keys."
    ]
   },
@@ -434,14 +381,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### d. dict.values()\n",
+    "\n",
     "Returns a list of the dictionary's values."
    ]
   },
