Minor changes + additional definition on floor division

--- a/Beginner_1/4. Operators and Delimiters.ipynb
+++ b/Beginner_1/4. Operators and Delimiters.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### + (addition)\n",
+    "### ( + ) addition\n",
     "\n",
     "Adds values on either side of the operator. "
    ]
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### - (subtraction)\n",
+    "### ( - ) subtraction\n",
     "\n",
     "Subtracts right hand operand from left hand operand."
    ]
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### * (multiplication)\n",
+    "### ( * ) multiplication\n",
     "\n",
     "Multiplies values on either side of the operator"
    ]
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### / (division)\n",
+    "### ( / ) division\n",
     "\n",
     "Divides left hand operand by right hand operand"
    ]
@@ -116,9 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### % (modulus)\n",
+    "### ( % ) modulus\n",
     "\n",
-    "Divides left hand operand by right hand operand and <b>returns remainder</b>."
+    "Divides left hand operand by right hand operand and <b><i>returns the remainder</i></b>."
    ]
   },
   {
@@ -140,9 +140,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ** (exponent)\n",
+    "### ( // ) Floor Division\n",
     "\n",
-    "Performs <b>exponential (power)</b> calculation on operators."
+    "Also known as the <i><b>integer division. </b></i> The division of operands will result to a quotient in which the digits after the decimal point are <b>removed</b>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "a = 10.25\n",
+    "b = 2\n",
+    "\n",
+    "my_floor_division = (a // b)\n",
+    "print(my_floor_division)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( ** ) exponent\n",
+    "\n",
+    "Performs <b><i>exponential (power)</i></b> calculation on operators."
    ]
   },
   {
@@ -162,24 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (Floor Division)\n",
-    "\n",
-    "The division of operands where the result is the quotient in which the digits after the decimal point are removed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = 10.25\n",
-    "b = 2\n",
-    "\n",
-    "my_floor_division = (a // b)\n",
-    "print(my_floor_division)"
+    "    "
    ]
   },
   {
@@ -230,9 +235,16 @@
     "b = 12.9\n",
     "c = a + b\n",
     "\n",
-    "# Write your code below:\n",
+    "# Write your code below\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   "
    ]
   },
   {
@@ -243,7 +255,7 @@
     "\n",
     "The assignment operator `=` can be augmented with arithmetic operators and used in combination instead of using mutiple statements.\n",
     "\n",
-    "###  `+=` (add AND)\n",
+    "### ( `+=` ) add AND\n",
     "\n",
     "Adds right operand to the left operand and assign the result to left operand. \n",
     "\n",
@@ -294,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `-=` (subtract AND)\n",
+    "### ( `-=` ) subtract AND\n",
     "Subtracts the right operand from left and assigns subtraction to the left operand. \n",
     "\n",
     "For example −"
@@ -319,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you guess the result if you print c? "
+    "<i>Can you guess the result if you print `c`?</i>"
    ]
   },
   {
@@ -344,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `*=` (multiply AND)\n",
+    "### ( `*=` ) multiply AND\n",
     "\n",
     "Multiplies right operand with the left operand and assign the result to left operand.\n",
     "\n",
@@ -370,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try it yourself! Print c!"
+    "<i>Try it yourself! Print c!</i>"
    ]
   },
   {
@@ -395,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `/=` (divide AND)\n",
+    "### ( `/=` ) divide AND\n",
     "\n",
     "Divides left operand with the right operand and assign the result to left operand. \n",
     "\n",
@@ -421,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try to print c below!"
+    "<i>Try to print c below!</i>"
    ]
   },
   {
@@ -446,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `%=` (modulus AND)\n",
+    "### ( `%=` ) modulus AND\n",
     "Takes modulus using two operands and assign the result to left operand. \n",
     "\n",
     "For example −"
@@ -471,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See the example below and again, print c."
+    "<i>See the example below and again, print c.</i>"
    ]
   },
   {
@@ -496,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `**=` (exponent AND)\n",
+    "### ( `**=` ) exponent AND\n",
     "Performs exponential (power) calculation on operators and assign value to the left operand. \n",
     "\n",
     "For example −"
@@ -521,7 +533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check out the example below an print c."
+    "<i>Check out the example below an print c.</i>"
    ]
   },
   {
@@ -546,8 +558,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `//=` (floor division AND)\n",
+    "### ( `//=` ) floor division AND\n",
     "Performs floor division on operators and assign value to the left operand. \n",
+    "> As discussed earlier, in floor division, the division of operands will result to a quotient in which the digits after the decimal point are removed.\n",
     "\n",
     "For example −"
    ]
@@ -571,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Print c below to see the result."
+    "<i>Print c below to see the result.</i>"
    ]
   },
   {
@@ -618,7 +631,7 @@
     "\n",
     "It only evaluates the second argument if the first one is <b>False</b>.\n",
     "\n",
-    "Go ahead if run the example below −"
+    "<i>Go ahead if run the example below </i>−"
    ]
   },
   {
@@ -645,7 +658,8 @@
    "source": [
     "On the example above, the second condition which is the <b>color2 == \"orange\"</b> was no longer evaluated because the first condition was already satisfied. Always remember that in <b>\"or\"</b>, only one condition needs to be satisfied to make it True.\n",
     "\n",
-    "Try changing the first condition to see what will happen."
+    "\n",
+    "<i>Try changing the first condition to see what will happen.</i>"
    ]
   },
   {
@@ -702,6 +716,13 @@
     "b = False\n",
     "\n",
     "print(not a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "     "
    ]
   },
   {
@@ -954,6 +975,20 @@
     "\n",
     "print(a)\n",
     "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
    ]
   },
   {
